# jcon-cpp

./: .clangd  .gitignore  .projectile  CMakeLists.txt  FUNDING.yml  Makefile  README.md  Rakefile  flake.nix  jcon-cpp.pro
src/: CMakeLists.txt  example.pro  example_service.cpp  example_service.h  include.pri  main.cpp  notification_service.cpp  notification_service.h  other_service.cpp  other_service.h
src/jcon/: CMakeLists.txt  jcon.h  jcon.pro  jcon_assert.h  json_rpc_client.cpp  json_rpc_client.h  json_rpc_debug_logger.cpp  json_rpc_debug_logger.h  json_rpc_endpoint.cpp  json_rpc_endpoint.h  json_rpc_error.cpp  json_rpc_error.h  json_rpc_file_logger.cpp  json_rpc_file_logger.h  json_rpc_future.cpp  json_rpc_future.h  json_rpc_logger.h  json_rpc_request.cpp  json_rpc_request.h  json_rpc_result.h  json_rpc_server.cpp  json_rpc_server.h  json_rpc_socket.h  json_rpc_success.h  json_rpc_tcp_client.cpp  json_rpc_tcp_client.h  json_rpc_tcp_server.cpp  json_rpc_tcp_server.h  json_rpc_tcp_socket.cpp  json_rpc_tcp_socket.h  json_rpc_websocket.cpp  json_rpc_websocket.h  json_rpc_websocket_client.cpp  json_rpc_websocket_client.h  json_rpc_websocket_server.cpp  json_rpc_websocket_server.h  string_util.cpp  string_util.h
src/test/test_erase/: CMakeLists.txt  test_erase.cpp  test_module.cpp
src/test/test_jcon_cpp/: CMakeLists.txt  test_jcon_cpp.cpp  test_module.cpp
